--- a/toutorials/padlock_probe_designer.ipynb
+++ b/toutorials/padlock_probe_designer.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Padlock Probe Designer\n",
     "\n",
-    "In this notebook will implent a pipeline to designe Padlock probes using the `oligo_designer_toolbox` package."
+    "This notebook implements a pipeline to designe Padlock probes using the `oligo_designer_toolbox` package."
    ]
   },
   {
@@ -33,7 +33,7 @@
     "## Define the parameters\n",
     "\n",
     "The first thing to do is to define the parameters we want to use to generate the Padlock probes. \n",
-    "A possible way to define all the parameters in flexible and reusable way is to use a configuration file. \n",
+    "A possible way to define all the parameters, that is flexible and reusable, is to use a configuration file. \n",
     "For this toutorial we will use the YAMl file `config/padlock_probe_designer.yaml`, you can have a look to understand which parameters are required and how the configuration file is structured.\n",
     "\n",
     "Once the configuration file has been set up we have to read its content:"
@@ -58,12 +58,12 @@
    "source": [
     "## Oligo sequences generation\n",
     "\n",
-    "Now we can start to actually build the pipeline, we will start by generating all the possible probes belonging to the genes defined in the config file, and having length between the maximum and minimum value given. The probes will be saved in a nested dicionary with the following structure: \n",
+    "Now we can start to actually build the pipeline, we will start by generating all the possible probes with length between the maximum and minimum value given belonging to the genes defined in the config file. The probes will be saved in a nested dicionary with the following structure: \n",
     "\n",
     "[gene][probe_id][probe_feature].\n",
     "\n",
     "\n",
-    "For this we need a `CustomDB`, or a class that inherits form it (e.g. `NCBIDB` and `EnsemblDB`) and call the method `create_oligos_DB`. These classes differ on how the get the fasta and gtf files, the first one oses local files while the others dowload them form the NCBI or Ensambl ftp server."
+    "For this we need a `CustomDB`, or a class that inherits form it (e.g. `NCBIDB` and `EnsemblDB`) and call the method `create_oligos_DB`. These classes differ on how the the fasta and the gtf filesused to compute the sequences are obtained. The first one oses local files while the others dowload them form the NCBI or Ensambl ftp server."
    ]
   },
   {
@@ -186,7 +186,7 @@
     "\n",
     "Once all the possible sequences are created, we apply a first filtering process based on the sequences properties (e.g. melting temperature or GC content). This is useful to reduce the amount of sequences we have to deal with in the next stages and discard all the sequences that are not suited for the experiment scope.\n",
     "\n",
-    "Each property filter is a calss that inherits from the Abstact Base Class `PreFilterBase`, and are required to have an `apply` method that take the `oligos_DB` and refurns the filtered version. To make this process smooth and modular the class `PropertyFilter` allows to apply several filters one after the other. It takes in input a list of filter classes and applies them sequentailly to the `oligos_DB` returning the final filterd version of the database. Additionally, all the necessary sequence features computed by the filters are store in the `oligos_DB` for possible later use.\n",
+    "Each property filter is a calss that inherits from the Abstact Base Class `PreFilterBase` They have a method called `apply` that takes the `oligos_DB` and returns it filtered. To make this process smooth and modular the class `PropertyFilter` allows to apply several filters one after the other. It takes in input a list of filter classes and applies them sequentailly to the `oligos_DB` returning the final filterd version of the database. Additionally, all the necessary sequence features computed by the filters are stored in the `oligos_DB` for possible later use.\n",
     "\n",
     "To create new property filters follow the Abstact Base Class requirements in `PreFilterBase`."
    ]
@@ -252,15 +252,15 @@
    "source": [
     "## Specificity filters\n",
     "\n",
-    "Generally, in experiments using DNA sequences on eof the main problems that can occur are off-target binding of the oligo sequences we designed. To avoid this one can decide to delete all the sequences that also match regions of the DNA outside the gene they belong to.\n",
+    "Generally, in experiments using DNA sequences one of the main problems that can occur are off-target binding of the oligo sequences designed. To avoid this one can decide to delete all the sequences that also match regions of the DNA outside the gene they belong to.\n",
     "\n",
-    "The classes in the subpackage `oligo_speificity_filters` detect these probes using aligne methods such as Blast and Bowtie and remove them from the database. The currently implemeted classes are: `ExactMatches`, `Blastn`, `Bowtie`, `Bowtie2`, `BowtieSeedRegion`, you can look at the documentation to understand more in detail their features. As before a second class `SpecificityFilter` takes a list of all the filters we want to apply, and applies them sequentially to the `oligos_DB`. \n",
+    "The classes in the subpackage `oligo_speificity_filters` detect these probes using aligne methods such as Blast and Bowtie and remove them from the database. The currently implemeted classes are: `ExactMatches`, `Blastn`, `Bowtie`, `Bowtie2`, `BowtieSeedRegion`, look at the documentation to understand more in detail their features. As before a second class `SpecificityFilter` takes a list of all the filters we want to apply, and applies them sequentially to the `oligos_DB`. \n",
     "\n",
-    "For our pipeline, we will use `ExactMatches`, `Blastn`, `BowtieSeedRegion`, where for teh latter the seed region will be generated with `LigationRegionCreation` (look at the documentation to understand what seed region means).\n",
+    "For our pipeline, we will use `ExactMatches`, `Blastn`, `BowtieSeedRegion`, where for the latter the seed region will be generated with `LigationRegionCreation` (look at the documentation to understand what seed region means).\n",
     "\n",
     "However, alignement methods need a reference fasta file to detect the off-target regions. The `Custom_DB` provides also the possibility to generate this reference region with the method `create_reference_DB`.\n",
     "\n",
-    "**Remark:** in future versions the database classes will be spit, one will deal only with the oligo sequences, while the other only the the reference"
+    "**Remark:** in future versions the database classes will be split, one will deal only with the oligo sequences, while the other only the the reference."
    ]
   },
   {
@@ -3791,9 +3791,9 @@
    "source": [
     "## Probeset generation\n",
     "\n",
-    "In the next step of the pipeline the probes will be choosen according to thief theoretical efficiency in the experiment scope (e.g. how well they bind to the target in the DNA). Each probe will receive a score computed by a class that inherits from `ProbeScoringBase`. Later, the sequences will be organized in sets and a class inheriting from `SetScoringBase` will give a general efficiency score to the set. At the end the best sets will be selected and sored.\n",
+    "In the next step of the pipeline the probes will be choosen according to their theoretical efficiency in the experiment scope (e.g. how well they bind to the target in the DNA). Each probe will receive a score computed by a class that inherits from `ProbeScoringBase`. Later, the sequences will be organized in sets and a class inheriting from `SetScoringBase` will give a general efficiency score to the set. At the end the best sets will be selected and sored.\n",
     "\n",
-    "It is required that the array of sequences we want to select for the experiments do not overlap. In fact, if two probes were overlapping, they would compete to bind to the same section of DNA and theire efficiency woul drop significantly. Therefore, it is extremely important to consider only sets on non-overlapping sequences.\n",
+    "It is required that the each array of sequences  contains probes that do not overlap. In fact, if two probes were overlapping, they would compete to bind to the same section of DNA and their efficiency would drop significantly. Therefore, it is extremely important to consider only sets of non-overlapping sequences.\n",
     "\n",
     "The class `ProbesetGenerator` takes the scoring strategies and tries to find, among all the feasible non-overlapping sets of probes, the sets with the best efficiency scores. These sets will be save in a pandas DataFrame with the following structure:\n",
     "\n",
@@ -3852,7 +3852,7 @@
    "source": [
     "## Last step\n",
     "\n",
-    "Once the best probesets are gnerated each experiment design might require (or not) an addtional step. In the case of the Padlock probe designer the last step consists in designing the final padlock probe sequences."
+    "Once the best probesets are generated each experiment design might require (or not) an addtional step. In the case of the Padlock probe designer the last step consists in designing the final padlock probe sequences."
    ]
   },
   {
@@ -3903,7 +3903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 (main, Mar 31 2022, 08:41:55) [GCC 7.5.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
