--- a/tests/test_probesets.ipynb
+++ b/tests/test_probesets.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/output\n"
+      "/home/francesco/Desktop/oligo-designer-toolsuite/output\n"
      ]
     }
    ],
@@ -23,9 +23,9 @@
     "sys.path.append(cwd)\n",
     "\n",
     "from oligo_designer_toolsuite.IO._database import CustomDB\n",
-    "from oligo_designer_toolsuite.oligo_selection._resolve_overlapping_oligos import ProbesetGenerator\n",
-    "from oligo_designer_toolsuite.oligo_selection._probe_scoring import PadlockProbeScoring, PadlockSetScoring\n",
-    "from oligo_designer_toolsuite.oligo_selection._heuristic_methods import padlock_heuristic_selection\n",
+    "from oligo_designer_toolsuite.oligo_selection import ProbesetGenerator\n",
+    "from oligo_designer_toolsuite.oligo_efficiency import PadlockProbeScoring, PadlockSetScoring\n",
+    "from oligo_designer_toolsuite.oligo_selection import padlock_heuristic_selection\n",
     "from oligo_designer_toolsuite.experiment_specific import PadlockSequenceDesigner\n",
     "\n",
     "from Bio.SeqUtils import MeltingTemp as mt\n",
@@ -46,34 +46,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "dir_annotation = '/home/francesco/Desktop/Work/NCBI'\n",
     "annotation = dir_annotation+'/GCF_000001405.40_GRCh38.p14_genomic.gtf'\n",
     "sequence = dir_annotation+'/GCF_000001405.40_GRCh38.p14_genomic.fna'\n",
-    "file_oligos = '/home/francesco/Desktop/Work/oligo-designer-toolsuite/output/probes/probes_info.tsv'\n",
+    "file_oligos = '/home/francesco/Desktop/Work/oligo-designer-toolsuite/output/specificity_filter/oligo_DB_human_GRCh38.p14_NCBI_release_GCF_000001405.40_gene_transcript.tsv'\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:62: UserWarning: Species not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:64: UserWarning: Species not specified.\n",
       "  warnings.warn(\"Species not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:66: UserWarning: Genome assembly not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:68: UserWarning: Genome assembly not specified.\n",
       "  warnings.warn(f\"Genome assembly not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:70: UserWarning: Annotation release not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:72: UserWarning: Annotation release not specified.\n",
       "  warnings.warn(f\"Annotation release not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:74: UserWarning: Annotation source not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:76: UserWarning: Annotation source not specified.\n",
       "  warnings.warn(f\"Annotation source not specified.\")\n"
      ]
     },
@@ -81,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time to process: 1.7047483921051025\n"
+      "time to process: 2.0250000953674316\n"
      ]
     }
    ],
@@ -93,17 +93,17 @@
     "for gene in genes:\n",
     "    for i in range(1):\n",
     "        database.oligos_DB[gene+f'_{i}'] = database.oligos_DB[gene]\n",
-    "padlock_scoring = PadlockProbeScoring(Tm_min = 52, Tm_opt = 60, Tm_max = 67, GC_min = 40, GC_opt = 50, GC_max = 60)\n",
+    "padlock_scoring = PadlockProbeScoring(Tm_min = 52, Tm_opt = 60, Tm_max = 67, GC_content_min = 40, GC_content_opt = 50, GC_content_max = 60)\n",
     "set_scoring = PadlockSetScoring()\n",
     "n_jobs = 12\n",
-    "probeset_generator = ProbesetGenerator(n_probes_per_gene = 5, \n",
-    "                                        min_n_probes_per_gene = 2,\n",
+    "probeset_generator = ProbesetGenerator(probeset_size = 5, \n",
+    "                                        min_probeset_size= 2,\n",
     "                                        probes_scoring = padlock_scoring, \n",
     "                                        heurustic_selection = padlock_heuristic_selection, \n",
     "                                        set_scoring=set_scoring,\n",
     "                                    )\n",
     "start = time.time()\n",
-    "database = probeset_generator.get_probe_sets(database, n_sets=100, n_jobs=5)\n",
+    "database = probeset_generator.apply(database, n_sets=100, n_jobs=5)\n",
     "print(f'time to process: {time.time() - start}')"
    ]
   },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
