--- a/toutorials/padlock_probe_designer.ipynb
+++ b/toutorials/padlock_probe_designer.ipynb
@@ -48,7 +48,7 @@
     "config_file = \"../config/padlock_probe_designer.yaml\"\n",
     "with open(config_file, 'r') as y:\n",
     "    config = yaml.safe_load(y)\n",
-    "dir_output = os.path.join(os.path.dirname(os.getcwd()), config[\"dir_output\"]) # create the complete path for teh output directory"
+    "dir_output = os.path.join(os.path.dirname(os.getcwd()), config[\"dir_output\"]) # create the complete path for the output directory"
    ]
   },
   {
