oligos and reference db split

--- a/toutorials/padlock_probe_designer.ipynb
+++ b/toutorials/padlock_probe_designer.ipynb
@@ -63,21 +63,21 @@
     "[gene][probe_id][probe_feature].\n",
     "\n",
     "\n",
-    "For this we need a `CustomDB`, or a class that inherits form it (e.g. `NCBIDB` and `EnsemblDB`) and call the method `create_oligos_DB`. These classes differ on how the the fasta and the gtf filesused to compute the sequences are obtained. The first one oses local files while the others dowload them form the NCBI or Ensambl ftp server."
+    "For this we need a `CustomOligoDB`, or a class that inherits form it (e.g. `NCBIOligoDB` and `EnsemblOligoDB`) and call the method `create_oligos_DB`. These classes differ on how the the fasta and the gtf filesused to compute the sequences are obtained. The first one oses local files while the others dowload them form the NCBI or Ensambl ftp server."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from oligo_designer_toolsuite.IO import CustomDB, NcbiDB, EnsemblDB\n",
+    "from oligo_designer_toolsuite.IO import CustomOligoDB, NcbiOligoDB, EnsemblOligoDB\n",
     "\n",
     "# define the database class\n",
     "if config[\"source\"] == \"ncbi\":\n",
     "    # dowload the fasta files formthe NCBI server\n",
-    "    database = NcbiDB(\n",
+    "    database = NcbiOligoDB(\n",
     "        probe_length_min=config[\"probe_length_min\"],\n",
     "        probe_length_max=config[\"probe_length_max\"],\n",
     "        species=config[\"species\"],\n",
@@ -88,7 +88,7 @@
     "        )\n",
     "elif config[\"source\"] == \"ensembl\":\n",
     "    # dowload the fasta files formthe NCBI server\n",
-    "    database = EnsemblDB(\n",
+    "    database = EnsemblOligoDB(\n",
     "        probe_length_min=config[\"probe_length_min\"],\n",
     "        probe_length_max=config[\"probe_length_max\"],\n",
     "        species=config[\"species\"],\n",
@@ -99,7 +99,7 @@
     "        )\n",
     "elif config[\"source\"] == \"custom\":\n",
     "    # use already dowloaded files\n",
-    "    database = CustomDB(\n",
+    "    database = CustomOligoDB(\n",
     "        probe_length_min=config[\"probe_length_min\"],\n",
     "        probe_length_max=config[\"probe_length_max\"],\n",
     "        species=config[\"species\"],\n",
@@ -186,7 +186,7 @@
     "\n",
     "Once all the possible sequences are created, we apply a first filtering process based on the sequences properties (e.g. melting temperature or GC content). This is useful to reduce the amount of sequences we have to deal with in the next stages and discard all the sequences that are not suited for the experiment scope.\n",
     "\n",
-    "Each property filter is a calss that inherits from the Abstact Base Class `PreFilterBase` They have a method called `apply` that takes the `oligos_DB` and returns it filtered. To make this process smooth and modular the class `PropertyFilter` allows to apply several filters one after the other. It takes in input a list of filter classes and applies them sequentailly to the `oligos_DB` returning the final filterd version of the database. Additionally, all the necessary sequence features computed by the filters are stored in the `oligos_DB` for possible later use.\n",
+    "Each property filter is a calss that inherits from the Abstact Base Class `PreFilterBase` They have a method called `apply` that takes the `oligos_DB` dictionary and returns it filtered. To make this process smooth and modular the class `PropertyFilter` allows to apply several filters one after the other. It takes in input a list of filter classes and a `CustomOligoDB` and applies sequentially all the filters and returns the final filterd version of the database. Additionally, all the necessary sequence features computed by the filters are stored in the `oligos_DB` for possible later use.\n",
     "\n",
     "To create new property filters follow the Abstact Base Class requirements in `PreFilterBase`."
    ]
@@ -258,9 +258,9 @@
     "\n",
     "For our pipeline, we will use `ExactMatches`, `Blastn`, `BowtieSeedRegion`, where for the latter the seed region will be generated with `LigationRegionCreation` (look at the documentation to understand what seed region means).\n",
     "\n",
-    "However, alignement methods need a reference fasta file to detect the off-target regions. The `Custom_DB` provides also the possibility to generate this reference region with the method `create_reference_DB`.\n",
+    "However, alignement methods need a reference fasta file to detect the off-target regions. The `CustomRefereceDB` class provides the possibility to generate this reference region with the method `create_reference_DB`.\n",
     "\n",
-    "**Remark:** in future versions the database classes will be split, one will deal only with the oligo sequences, while the other only the the reference."
+    "**Remark:** it is possible to apply a set of specificity filters with a reference file and a second set with a different reference file. "
    ]
   },
   {
@@ -269,6 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from oligo_designer_toolsuite.IO import CustomReferenceDB\n",
     "from oligo_designer_toolsuite.oligo_specificity_filter import (\n",
     "    SpecificityFilter,\n",
     "    ExactMatches,\n",
@@ -280,7 +281,16 @@
     "dir_specificity = os.path.join(dir_output, \"specificity_temporary\") # folder where the temporary files will be written\n",
     "\n",
     "# generate the reference\n",
-    "database.create_reference_DB() # use standard parameters \n",
+    "reference_database = CustomReferenceDB(\n",
+    "    species=config[\"species\"],\n",
+    "    genome_assembly=config[\"genome_assembly\"],\n",
+    "    annotation_release=config[\"annotation_release\"],\n",
+    "    annotation_source=config[\"annotation_source\"],\n",
+    "    file_annotation=config[\"file_annotation\"],\n",
+    "    file_sequence=config[\"file_sequence\"],\n",
+    "    dir_output=dir_output\n",
+    ")\n",
+    "reference_database.create_reference_DB(block_size=config[\"block_size\"]) # leave the standard parameters\n",
     "\n",
     "# intialize the filter classes\n",
     "exact_mathces = ExactMatches(dir_specificity=dir_specificity)\n",
@@ -297,7 +307,7 @@
     "# initialize the specificity filter class\n",
     "specificity_filter = SpecificityFilter(filters=filters, write_genes_with_insufficient_probes=config[\"write_removed_genes\"])\n",
     "# filte r the database\n",
-    "database = specificity_filter.apply(database=database, n_jobs=config[\"n_jobs\"])\n",
+    "database = specificity_filter.apply(oligo_database=database, reference_database=reference_database, n_jobs=config[\"n_jobs\"])\n",
     "# write the intermediate result\n",
     "if config[\"write_intermediate_steps\"]:\n",
     "    database.write_oligos_DB(format=config[\"file_format\"], dir_oligos_DB=\"specificity_filter\")"
@@ -422,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (main, Mar 31 2022, 08:41:55) [GCC 7.5.0]"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
